correct text-align and decorations' position

--- a/src/style/_quote.scss
+++ b/src/style/_quote.scss
@@ -44,11 +44,20 @@
         }
     }
 
+    &__decoration {
+        @include breakpoint("desktop") {
+            position: relative;
+            bottom: 5rem
+        }
+    }
+
     &__text {
         color: var(--contrast-secondary-text);
+        text-align: center;
 
         @include breakpoint("desktop") {
             width: 21.875rem;
+            text-align: left;
         }
 
         &__title {
@@ -56,7 +65,6 @@
             font-size: 2.5rem;
             line-height: 48px;
             /* identical to box height, or 120% */
-            text-align: center;
             letter-spacing: -0.416667px;
             color: var(--contrast-primary-text);
 
@@ -65,7 +73,7 @@
                 line-height: 3.5rem;
                 /* identical to box height, or 117% */
                 letter-spacing: -0.5px;
-                text-align: left;
+
             }
         }
 
@@ -73,7 +81,6 @@
             margin: 2.5rem 1rem;
             font-size: 1.125rem;
             line-height: 2rem;
-            text-align: center;
             letter-spacing: 0.09px;
 
             @include breakpoint ("tablet") {
@@ -84,7 +91,7 @@
                 font-size: 1.25rem;
                 letter-spacing: 0.1px;
                 margin-inline: 0;
-                text-align: left;
+
             }
         }
 
@@ -92,14 +99,12 @@
             font-size: 1.125rem;
             font-weight: 700;
             line-height: 2rem;
-            text-align: center;
             letter-spacing: -0.18px;
             color: var(--contrast-primary-text);
         }
 
         &__job {
             line-height: 1.625rem;
-            text-align: center;
             letter-spacing: 2.5px;
             text-transform: uppercase;
         }
